--- a/src/game-add.html
+++ b/src/game-add.html
@@ -6,30 +6,23 @@
 {% set page_title = "Créer une partie" %}
 {% set body_class = "" %}
 
-{% set header = {backUrl: false} %}
+{% set header = {show: true, backUrl: "index.html", backLabel: "accueil" } %}
 <!-- //END page variables -->
 
 <!-- //START page Content -->
 {% block page_content %}
 
-<h1 class="">{{page_title}}</h1>
+<div class="c-content c-content--page">
+    <h1 class="c-title">{{page_title}}</h1>
+    <form class="c-form" action="game-start.html">
+        <div class="c-field">
+            <label class="c-label" for="game_name">Nom de la partie *</label>
+            <input class="c-input" value="Old scarab 3" type="text" id="game_name" />
+        </div>
 
-<form action="game-start.html">
-    <div class="c-field">
-        <label for="game_name">Nom de la partie *</label>
-        <input type="text" id="game_name" />
-    </div>
-
-    <div class="c-field">
-        <label for="game_death" data-checked-label="Oui" data-unchecked-label="Non"
-            >Mort active</label
-        >
-        <input type="checkbox" id="game_death" />
-    </div>
-
-    <button type="submit" class="c-button c-button--primary">Créer la partie</button>
-</form>
-
+        <button type="submit" class="c-button c-button--primary">Créer la partie</button>
+    </form>
+</div>
 {% endblock %}
 
 <!-- //END page Content -->
