--- a/src/game-injury-check.html
+++ b/src/game-injury-check.html
@@ -3,7 +3,7 @@
 
 <!-- //START page variables -->
 <!-- prettier-ignore -->
-{% set page_title = "Old scarab 3" %}
+{% set page_title = "Diagnostic" %}
 {% set body_class = "" %}
 
 {% set header = { show: true, homeBtn: true, statsBtn: true} %}
@@ -14,8 +14,9 @@
 
 <div class="c-content c-content--game">
     <h1 class="c-title">{{page_title}}</h1>
+    <p>[Loader: x%]</p>
 
-    <a href="game-injury-localisation.html" class="c-button c-button--primary">Meeeedic !</a>
+    <a href="game-injury-treat.html" class="c-button c-button--primary outline">Continuer</a>
 </div>
 
 {% endblock %}
