--- a/src/game-end.html
+++ b/src/game-end.html
@@ -3,7 +3,7 @@
 
 <!-- //START page variables -->
 <!-- prettier-ignore -->
-{% set page_title = "Old scarab 3" %}
+{% set page_title = "Patient soigné !" %}
 {% set body_class = "" %}
 
 {% set header = { show: true, homeBtn: true, statsBtn: true} %}
@@ -14,8 +14,7 @@
 
 <div class="c-content c-content--game">
     <h1 class="c-title">{{page_title}}</h1>
-
-    <a href="game-injury-localisation.html" class="c-button c-button--primary">Meeeedic !</a>
+    <a href="game-start.html" class="c-button c-button--primary outline">Retour à l'accueil</a>
 </div>
 
 {% endblock %}
